--- a/LOAD_UNPACKED/manifest_v2.json
+++ b/LOAD_UNPACKED/manifest_v2.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "wplacer",
+  "name": "KGlacer Companion",
   "version": "4.4",
-  "description": "Automatically sends session and Turnstile tokens from wplace.live to a wplacer server.",
+  "description": "Automatically sends session and Turnstile tokens from wplace.live to a KGlacer server.",
   "permissions": [
     "storage",
     "cookies",
@@ -14,7 +14,9 @@
     "http://127.0.0.1/*"
   ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
     "persistent": true
   },
   "browser_action": {
@@ -26,8 +28,12 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://wplace.live/*"],
-      "js": ["content.js"],
+      "matches": [
+        "https://wplace.live/*"
+      ],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_start"
     }
   ]
