--- a/LOAD_UNPACKED/manifest.json
+++ b/LOAD_UNPACKED/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "KGlacer Companion",
   "version": "4.4",
-  "description": "Automatically sends session and Turnstile tokens from wplace.live to a KGlacer server.",
+  "description": "Keeps KGlacer connected to wplace.live and your local paint server.",
   "permissions": [
     "storage",
     "cookies",
@@ -40,14 +40,6 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "turnstile_inject.js",
-        "pawtect_inject.js",
-        "solver.wasm/immutable/chunks/*.js",
-        "solver.wasm/immutable/chunks/*/*.js",
-        "solver.wasm/immutable/*.js",
-        "solver.wasm/immutable/assets/*.wasm",
-        "solver.wasm/pawtect_wasm_bg.*.wasm",
-        "solver.wasm/pawtect_wasm_bg.wasm"
       ],
       "matches": [
         "https://wplace.live/*"
